# geodesk-gol

./: CMakeLists.txt  NOTICE  README.md
.github/workflows/: publish.yml  release.yml
doc/: README.txt
doc/releases/: v2.0.0.md  v2.0.1.md  v2.0.2.md  v2.0.3.md  v2.1.0.md  v2.1.1.md  v2.2.0.md  v2.2.1.md  v2.2.2.md  v2.2.3.md
include/clarisma/net/: HttpClient.h  HttpException.h  HttpHeaders.h  HttpReceiver.h  HttpRequestHeaders.h  HttpResponse.h  HttpResponseHeaders.h  HttpResponseReader.h  SimpleUrlView.h  UrlUtils.h  UrlView.h
include/clarisma/net/detail/: HttpHeaders_win.inl  HttpRequestHeaders_posix.inl  (+5 more)
include/clarisma/zip/: CompressedData.h  Deflater.h  Inflater.h  Zip.h  ZipArchive.h  ZipException.h
packaging/windows/: gol.iss
src/: test.cxx
src/change/: ChangeIngester.cpp  ChangeIngester.h  ChangeReader.cpp  ChangeReader.h  ChangeWriter.cpp  ChangeWriter.h  FeaturePileLookup.cpp  FeaturePileLookup.h  ReplicationClient.cpp  ReplicationClient.h  SearchScope.cpp  SearchScope.h  TableEncoder.h  TileChangeAnalyzer.cpp  TileChangeAnalyzer.h  UpdateSettings.cpp  UpdateSettings.h  Updater.cpp  Updater.h  Updater_analyze.cpp
src/change/model/: CFeature.cpp  CFeature.h  CFeatureStub.h  CRef.h  CRelationTable.cpp  CRelationTable.h  CTagTable.cpp  CTagTable.h  ChangeAction.cpp  ChangeAction.h  ChangeFlags.h  ChangeModel.cpp  ChangeModel.h  ChangeModelDumper.cpp  ChangeModelDumper.h  ChangedFeature2D.cpp  ChangedFeature2D.h  ChangedFeatureBase.h  ChangedNode.h  ChangedTile.cpp  ChangedTile.h
src/check/: GolChecker.cpp  GolChecker.h  TileChecker.cpp  TileChecker.h
src/clarisma/net/: HttpClient.cpp  HttpClient_linux.cxx  HttpClient_windows.cxx  HttpException.cpp  HttpRequestHeaders.cpp  HttpResponse.cpp  HttpResponseHeaders.cpp  HttpResponse_windows.cxx  UrlView.cpp
src/clarisma/zip/: CompressedData.cpp  Inflater.cpp  Zip.cpp  Zip_gzip.cpp
src/gol/: AbstractQueryCommand.cpp  AbstractQueryCommand.h  BasicCommand.cpp  BasicCommand.h  BuildCommand.cpp  BuildCommand.h  CheckCommand.cpp  CheckCommand.h  CopyCommand.cpp  CopyCommand.h  DefaultCommand.cpp  DefaultCommand.h  DumpTilesCommand.cpp  DumpTilesCommand.h  GetCommand.cpp  GetCommand.h  GetIdCommand.cpp  GetIdCommand.h  GolCommand.cpp  GolCommand.h  GolTool.cpp  GolTool.h  InfoCommand.cpp  InfoCommand.h  InstallCommand.cpp  InstallCommand.h  LoadCommand.cpp  LoadCommand.h  MapCommand.cpp  MapCommand.h  QueryCommand.cpp  QueryCommand.h  SaveCommand.cpp  SaveCommand.h  TestCommand.cpp  TestCommand.h  UpdateCommand.cpp  UpdateCommand.h  debug.h  main.cpp  (+1 more)
src/gol/load/: TileDownloadClient.cpp  TileDownloadClient.h  TileDownloader.cpp  TileDownloader.h  TileLoader.cpp  TileLoader.h  TileSaver.cpp  TileSaver.h
src/gol/map/: MapFeatureOptions.h
src/gol/query/: BriefQueryPrinter.cpp  BriefQueryPrinter.h  CountQueryPrinter.cpp  CountQueryPrinter.h  CsvQueryPrinter.h  FeaturePrinterBuffer.h  FeatureRow.cpp  FeatureRow.h  GeoJsonQueryPrinter.h  ListQueryPrinter.h  MapQueryPrinter.h  OsmPbfQueryPrinter.cpp  OsmPbfQueryPrinter.h  OsmQueryPrinter.cpp  OsmQueryPrinter.h  OutputFormat.h  ParallelQueryPrinter.h  QueryPrinter.cpp  QueryPrinter.h  QuerySpec.h  SimpleQueryPrinter.cpp  SimpleQueryPrinter.h  WktQueryPrinter.h  XmlQueryPrinter.cpp  XmlQueryPrinter.h
src/gol/util/: BoxParser.h  CoordinateParser.h  PolygonParser.cpp  PolygonParser.h
src/install/: Installer.cpp  Installer.h  ProductParser.cpp  ProductParser.h
src/osm/: OsmPbf.h  OsmPbfEncoder.cpp  OsmPbfEncoder.h  OsmPbfMetadata.h  OsmPbfReader.h  OsmPbfWriter.cpp  OsmPbfWriter.h  ProtoPbfEncoder.cpp  ProtoPbfEncoder.h  VarintEncoder.h
src/tag/: AbstractTagsParser.cpp  AbstractTagsParser.h  AreaClassifier.cpp  AreaClassifier.h  TagTableModel.cpp  TagTableModel.h
src/tile/compiler/: AbstractMemberTableWriter.h  AreaClassifier.cpp  AreaClassifier.h  GlobalTagFixer.h  HilbertIndexBuilder.cpp  HilbertIndexBuilder.h  IndexSettings.h  LocalTagFixer.h  MemberTableFixer.h  MemberTableWriter.h  NodeTableFixer.h  NodeTableWriter.h  RelationTableFixer.h  RelationTableHasher.h  RelationTableWriter.h  TagTableHasher.h  TagTableWriter.h  TileCompiler.cpp  TileCompiler.h
src/tile/model/: Layout.cpp  Layout.h  Membership.h  MutableFeaturePtr.h  TDataElement.h  TElement.h  TExportTable.cpp  TExportTable.h  TFeature.cpp  TFeature.h  TFeature2D.cpp  TFeature2D.h  THeader.cpp  THeader.h  TIndex.cpp  TIndex.h  TIndexBranch.h  TIndexLeaf.cpp  TIndexLeaf.h  TIndexTrunk.cpp  TIndexTrunk.h  TNode.cpp  TNode.h  TReferencedElement.h  TRelation.cpp  TRelation.h  TRelationTable.cpp  TRelationTable.h  TSharedElement.h  TString.h  TTagTable.cpp  TTagTable.h  TWay.cpp  TWay.h  TileModel.cpp  TileModel.h  TileReader.cpp  TileReader.h  TileReaderBase.h
src/tile/tes/: TesArchive.cpp  TesArchive.h  TesArchiveWriter.cpp  TesArchiveWriter.h  TesChecker.cpp  TesChecker.h  TesException.h  TesFlags.h  TesParcel.cpp  TesParcel.h  TesReader.cpp  TesReader.h  TesWriter.cpp  TesWriter.h
src/tile/util/: TileData.h  TileDumper.cpp  TileDumper.h  TileSizeCollector.cpp  TileSizeCollector.h  TileTaskEngine.cpp  TileTaskEngine.h
test/: conftest.py  test_build.py  test_query.py  test_save.py
tools/: download_osc.py  headers.py  interactive.py
